--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ textarea {
   height: calc(100% - 72px);
 }
 .container .chat-container .chat-content-nav {
-  width: 25%;
+  width: 30%;
   height: 100%;
   border-right: 2px solid rgba(0, 0, 0, 0.1);
   padding: 1.5rem;
@@ -274,6 +274,7 @@ textarea {
   position: sticky;
   top: 0;
   background-color: #ffffff;
+  z-index: 10;
 }
 .container .chat-container .chat-content-nav .direct-messages .friend-message {
   margin-top: 1rem;
@@ -296,6 +297,28 @@ textarea {
   font-size: 1.4rem;
   font-weight: bold;
 }
+.container .chat-container .chat-content-nav .direct-messages .friend-message .friend-status {
+  display: inline-block;
+  position: relative;
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+.container .chat-container .chat-content-nav .direct-messages .friend-message .friend-status::before {
+  content: "";
+  width: 1rem;
+  height: 1rem;
+  background-color: #4ed399;
+  position: absolute;
+  bottom: 2px;
+  right: 2px;
+  border-radius: 50%;
+  box-shadow: 0 0 0 2px #ffffff;
+}
+.container .chat-container .chat-content-nav .direct-messages .friend-message:first-of-type .friend-status::before {
+  background-color: #f36367;
+}
 .container .chat-container .chat-content-nav .direct-messages .status {
   margin-left: auto;
   margin-right: 0;
@@ -307,7 +330,7 @@ textarea {
   text-align: center;
 }
 .container .chat-container .chat-content-nav .direct-messages .status p:last-child {
-  margin-top: 0.5rem;
+  margin-top: 0.2rem;
   width: 2rem;
   height: 2rem;
   background-color: #0265fc;
@@ -317,7 +340,7 @@ textarea {
   align-content: center;
 }
 .container .chat-container .chat-content-box {
-  width: 75%;
+  width: 70%;
   height: 100%;
   padding: 0 1.5rem 1.5rem;
 }
@@ -326,7 +349,7 @@ textarea {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 2rem;
+  padding: 1rem 0;
   position: sticky;
   top: 0;
   left: 0;
@@ -339,7 +362,25 @@ textarea {
   width: 5rem;
   height: 5rem;
   border-radius: 50%;
+}
+.container .chat-container .chat-content-box .infomation-friend .status {
+  display: inline-block;
+  position: relative;
+  width: 5rem;
+  height: 5rem;
+  border-radius: 50%;
   margin-right: 1rem;
+}
+.container .chat-container .chat-content-box .infomation-friend .status::before {
+  content: "";
+  width: 1rem;
+  height: 1rem;
+  background-color: #4ed399;
+  position: absolute;
+  bottom: 2px;
+  right: 2px;
+  border-radius: 50%;
+  box-shadow: 0 0 0 2px #ffffff;
 }
 .container .chat-container .chat-content-box .infomation-friend .friend-name {
   font-weight: bold;
@@ -353,6 +394,10 @@ textarea {
   display: inline-block;
   padding: 1rem;
   align-content: center;
+  transition: 0.25s;
+}
+.container .chat-container .chat-content-box .infomation-action i:hover {
+  color: #57d7d3;
 }
 .container .chat-container .chat-content-box .type-message {
   width: 100%;
@@ -372,6 +417,12 @@ textarea {
   display: flex;
   justify-content: space-between;
 }
+.container .chat-container .chat-content-box .type-message .media i {
+  transition: 0.25s;
+}
+.container .chat-container .chat-content-box .type-message .media i:hover {
+  color: #57d7d3;
+}
 .container .chat-container .chat-content-box .type-message .typing {
   width: calc(90% - 2rem);
   position: relative;
@@ -382,12 +433,63 @@ textarea {
   outline: none;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 1rem;
+  transition: 0.25s;
+}
+.container .chat-container .chat-content-box .type-message .typing .input-message:focus {
+  border-color: #57d7d3;
+}
+.container .chat-container .chat-content-box .type-message .typing .input-message:focus ~ .send-icon {
+  color: #57d7d3;
 }
 .container .chat-container .chat-content-box .type-message .typing .send-icon {
   position: absolute;
   top: 1.5rem;
   right: 1rem;
   color: #172034;
+  transition: 0.25s;
+}
+.container .chat-container .chat-content-box .chat-history {
+  width: 100%;
+  height: 80%;
+  overflow-y: auto;
+  padding: 1rem;
+  font-size: 1.4rem;
+}
+.container .chat-container .chat-content-box .chat-history::-webkit-scrollbar {
+  display: none;
+}
+.container .chat-container .chat-content-box .chat-history .mess-of-friend {
+  margin: 0.5rem 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+.container .chat-container .chat-content-box .chat-history .mess-of-friend img {
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  overflow: hidden;
+  object-fit: cover;
+}
+.container .chat-container .chat-content-box .chat-history .mess-of-friend .mess-desc {
+  padding: 0.5rem 1rem;
+  margin-left: 1rem;
+  border-radius: 5rem;
+  background-color: #f9fbfc;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+.container .chat-container .chat-content-box .chat-history .mess-of-me {
+  width: 100%;
+  text-align: end;
+  margin: 0.5rem 0;
+}
+.container .chat-container .chat-content-box .chat-history .mess-of-me .mess-desc-me {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  background-color: #57d7d3;
+  border-radius: 5rem;
+  color: #ffffff;
+  box-shadow: 0 0 10px rgba(87, 215, 211, 0.3);
 }
 
 /*# sourceMappingURL=style.css.map */
