--- a/scss/style.scss
+++ b/scss/style.scss
@@ -242,7 +242,7 @@ textarea {
       display: flex;
       height: calc(100% - 72px);
       &-nav {
-        width: 25%;
+        width: 30%;
         height: 100%;
         border-right: 2px solid rgba(0, 0, 0, 0.1);
         padding: 1.5rem;
@@ -293,6 +293,7 @@ textarea {
             position: sticky;
             top: 0;
             background-color: #ffffff;
+            z-index: 10;
           }
           .friend-message {
             margin-top: 1rem;
@@ -315,6 +316,31 @@ textarea {
               font-size: 1.4rem;
               font-weight: bold;
             }
+
+            .friend-status {
+              display: inline-block;
+              position: relative;
+              width: 5rem;
+              height: 5rem;
+              border-radius: 50%;
+              margin-right: 1rem;
+              &::before {
+                content: "";
+                width: 1rem;
+                height: 1rem;
+                background-color: #4ed399;
+                position: absolute;
+                bottom: 2px;
+                right: 2px;
+                border-radius: 50%;
+                box-shadow: 0 0 0 2px #ffffff;
+              }
+            }
+            &:first-of-type {
+              .friend-status::before {
+                background-color: #f36367;
+              }
+            }
           }
 
           .status {
@@ -326,7 +352,7 @@ textarea {
             p {
               text-align: center;
               &:last-child {
-                margin-top: 0.5rem;
+                margin-top: 0.2rem;
                 width: 2rem;
                 height: 2rem;
                 background-color: #0265fc;
@@ -341,7 +367,7 @@ textarea {
       }
 
       &-box {
-        width: 75%;
+        width: 70%;
         height: 100%;
         padding: 0 1.5rem 1.5rem;
         .infomation {
@@ -349,7 +375,7 @@ textarea {
           display: flex;
           justify-content: space-between;
           align-items: center;
-          padding: 1rem 2rem;
+          padding: 1rem 0;
           position: sticky;
           top: 0;
           left: 0;
@@ -359,7 +385,26 @@ textarea {
               width: 5rem;
               height: 5rem;
               border-radius: 50%;
+            }
+
+            .status {
+              display: inline-block;
+              position: relative;
+              width: 5rem;
+              height: 5rem;
+              border-radius: 50%;
               margin-right: 1rem;
+              &::before {
+                content: "";
+                width: 1rem;
+                height: 1rem;
+                background-color: #4ed399;
+                position: absolute;
+                bottom: 2px;
+                right: 2px;
+                border-radius: 50%;
+                box-shadow: 0 0 0 2px #ffffff;
+              }
             }
             display: flex;
             align-items: center;
@@ -376,6 +421,10 @@ textarea {
               display: inline-block;
               padding: 1rem;
               align-content: center;
+              transition: 0.25s;
+            }
+            i:hover {
+              color: #57d7d3;
             }
           }
         }
@@ -396,6 +445,12 @@ textarea {
             width: 10%;
             display: flex;
             justify-content: space-between;
+            i {
+              transition: 0.25s;
+            }
+            i:hover {
+              color: #57d7d3;
+            }
           }
 
           .typing {
@@ -407,12 +462,67 @@ textarea {
               outline: none;
               border: 1px solid rgba(0, 0, 0, 0.1);
               border-radius: 1rem;
+              transition: 0.25s;
+              &:focus {
+                border-color: #57d7d3;
+              }
+
+              &:focus ~ .send-icon {
+                color: #57d7d3;
+              }
             }
             .send-icon {
               position: absolute;
               top: 1.5rem;
               right: 1rem;
               color: $secondary-color;
+              transition: 0.25s;
+            }
+          }
+        }
+
+        .chat-history {
+          width: 100%;
+          height: 80%;
+          overflow-y: auto;
+          padding: 1rem;
+          font-size: 1.4rem;
+          &::-webkit-scrollbar {
+            display: none;
+          }
+          .mess-of-friend {
+            margin: 0.5rem 0;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            img {
+              width: 2rem;
+              height: 2rem;
+              border-radius: 50%;
+              overflow: hidden;
+              object-fit: cover;
+            }
+
+            .mess-desc {
+              padding: 0.5rem 1rem;
+              margin-left: 1rem;
+              border-radius: 5rem;
+              background-color: $primary-color;
+              box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            }
+          }
+
+          .mess-of-me {
+            width: 100%;
+            text-align: end;
+            margin: 0.5rem 0;
+            .mess-desc-me {
+              display: inline-block;
+              padding: 0.5rem 1rem;
+              background-color: #57d7d3;
+              border-radius: 5rem;
+              color: #ffffff;
+              box-shadow: 0 0 10px rgba($color: #57d7d3, $alpha: 0.3);
             }
           }
         }
